cmake_minimum_required(VERSION ${CMAKE_REQUIRED_VERSION})

# Add all .hpp and .cpp files to NODE_SOURCES
file(GLOB NODE_SOURCES CONFIGURE_DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/*.hpp)
file(GLOB NODE_SOURCES CONFIGURE_DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)

add_library(NodesLib STATIC ${NODE_SOURCES})
